<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >FIS Heer
    </string>
    <string name="action_settings" >über diese App
    </string>
    <string name="hello_world" >Hello world!
    </string><string name="Inbetriebnahme">Inbetriebnahme
    </string><string name="anleitung">Anleitung FIS Heer</string>
    <string name="anleitungse240">Anleitung SE235</string>
    <string name="fehlerfis">Fehlerbehebung Fis Heer</string>
    <string name="fehlerse235">Fehlerbehebung SE235</string>
    <string name="fehlerbehebung">Fehlerbehebung</string>
    <string name="se235anleitung">Se 235 Anleitung</string>
    <string name="fisheeranleitungtext">FIS Heer Anleitung</string>
    <string name="fehlerbehebfisheer">Fehlebehebung Fis Heer</string>
    <string name="fehlerbehebungse235">Fehlerbehebung SE 235</string>
    <string name="intern">Intern</string>
    <string name="inbetriebnahmese235regl">Einschalten</string>
    <string name="se235_anleitung_main">SE 235 Anleitung</string>
    <string name="se235_programieren">SE 235 Programieren</string>
    <string name="se235_syncronisieren">SE 235 Synchronisieren</string>
    <string name="se235_sync">Se 235 synchronisieren</string>
    <string name="se235sync_text">Der NCS startet die Synchronisation beim SE-235 folgendermassen:</string>
    <string name="fehlermain_leer">Leer</string>
    <string name="about_text">Diese applikation ist nicht für die öffentlichkeit gedacht, sondern für ausbildungs und übungszwecke.</string>
    <string name="copyrigt">Copyright by Gion-Martin Pfiffner</string>
    <string name="test">test</string>
    <string name="hinweise">hinweise</string>
    <string name="hinweis_text">Wellchen Hinweis willst du geben</string>
    <string name="wasendeckt">Was ist oder war der fehler?</string>
    <string name="wiegelöst">Wie hast du es gelöst?</string>
    <string name="sonstiges">Sonstiges</string>
    <string name="senden">Senden</string>
    <string name="monitorkali">4.Monitor kalibrieren</string>
    <string name="datenfunkkonf">5.Datenfunk Konf.</string>
    <string name="datenfunktdma">6.Datenfunk und TDMA Sync</string>
    <string name="datentrans">7.Datentransfer</string>
    <string name="missionfile">8.Mission File laden(Server)</string>
    <string name="knoten">9.Eigenen Knoten definieren(Server)</string>
    <string name="replikanetz">10.Replikationsnetz konfigurieren(Server)</string>
    <string name="gps">11.Konfiguration GPS(Server)</string>
    <string name="keymessage">12.Key Message Aktivieren(Server)</string>
    <string name="clientlocal">13.Client von Local auf Remote umschalten(Client)</string><string name="first">Zuerst schrit 1-3 (SE235 Inbetriebnahme) machen.</string><string name="fehler_missionfile">Mission File Laden dauert ewig</string><string name="fehlermissionfileladen">Mission File Laden dauert ewig</string><string name="systemreinigen">System reinigen</string><string name="replikastop">18.Replikation stoppen(Server)</string><string name="missionuserlöschen">19.Mission File und User löschen(Server)</string><string name="typesloeschen">20.Types und Estab. File löschen(Server)</string><string name="replikaloeschen">21.Replikationsdaten löschen(Server)</string><string name="nmaloeschen">22.NMA Files löschen(Server)</string><string name="funkloeschen">23.Funkgeräte löschen</string><string name="geraeteoff">24.Geräte Auschalten</string><string name="app_Mainmenu">Hauptmenu</string><string name="app_anleitungmain">Anleitung FIS Heer Menu</string><string name="app_anleitungsemain">Anleitung SE235 Menu</string><string name="app_fehlerfisheer">Fehlerbehebung FIS Heer Menu</string><string name="app_fehlerse">Fehlerbehebung SE235 Menu</string><string name="app_anleitungse">Anleitung SE235 Menu</string>

</resources>
