<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
        >
<RelativeLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:minHeight="@dimen/activity_vertical_max">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wasendeckt"
            android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/textView" android:layout_alignLeft="@+id/textView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wiegelöst"
            android:id="@+id/textView2"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/editText" android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_marginTop="105dp" android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/editText3" android:layout_alignRight="@+id/editText3"
            android:layout_above="@+id/textView3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sonstiges"
            android:id="@+id/textView3"
            android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_below="@+id/textView2"
            android:layout_alignRight="@+id/editText" android:layout_alignLeft="@+id/editText"
            android:layout_above="@+id/textView3"/>
</RelativeLayout>
</ScrollView>